# wmud

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  README  TODO  autogen.sh  configure  configure.ac  create-world.sh  create-world.sh.in  drop-world.sh  drop-world.sh.in  syslog
cnf/: aclocal.m4
conf/: .gitignore  wmud.conf.example
data/: plane.erodar.txt  terrain.json  wmud.conf  world.xml
data/texts/: motd
doc/: markup.txt
doc/reference/libwmud-session/: Makefile.am  wmud-session-docs.sgml  wmud-session-sections.txt
doc/reference/libwmud-world/: Makefile.am  wmud-world-docs.sgml  wmud-world-sections.txt
docs/reference/wmud/: .gitignore  Makefile.am  wmud-docs.sgml  wmud-sections.txt
iminiru/: data.sql
lib/etc/: .gitignore
lib/misc/: socials
lib/text/: motd
lib/world/wld/: 1.wld  72.wld
lib/world/zon/: index
libgiosmtp/: Makefile.am  gioextension.c  giomodule.c
libwmud-protocol-telnet/: Makefile.am  wmud-protocol-telnet.c
libwmud-session/: Makefile.am  wmud-session.c  wmud-session.h  wmud-session.pc.in
libwmud-state-sqlite3/: Makefile.am  wmud-state-sqlite3.c
libwmud-world/: Makefile.am  wmud-world.c  wmud-world.h
log/: .gitignore
nbproject/: Package-Default.bash  configurations.xml  project.xml
old-codebase/: .gitignore
old-codebase/cnf/: autogen.sh  configure.in
old-codebase/lib/plrobjs/: .gitignore
old-codebase/lib/world/wld/: index
old-codebase/lib/world/zon/: 1.zon
old-codebase/src/: .gitignore  act.movement.c  act.social.c  boards.c  class.c  comm.c  constants.c  db.c  fight.c  interpreter.c  mail.c  races.c  spells.c
old-codebase/src/util/: Makefile.in
sql/: drop-world.sql  menu.sql  planes.sql  planets.sql  players.sql  rooms.sql
src/: .gitignore  Makefile.am  Makefile.in  act.informative.c  act.item.c  act.movement.c  act.other.c  act.wizard.c  ansi.c  ansi.h  chat.c  chat.h  commands.c  commands.h  config.c  configfile-module.h  configfile.c  configfile.h  configuration.c  configuration.h  constants.c  db.c  db.h  fight.c  game-networking.c  game-networking.h  game.c  game.h  interpreter.c  interpreter.h  irc.c  irc.h  logger-module.h  logger.c  logger.h  main.c  main.h  maintenance.c  module.h  modules.c  (+21 more)
wmud/: .gitignore  Makefile.am  __main__.py  configuration.c  configuration.h  db.c  db.h  enumtypes.c  enumtypes.c.template  enumtypes.h  enumtypes.h.template  game-networking.c  game-networking.h  game.c  game.h  interpreter.c  interpreter.h  main.c  main.h  maintenance.c  maintenance.h  menu.c  menu.h  players.c  players.h  texts.c  texts.h  wmud-configuration.c  wmud-configuration.h  wmud-configuration.vala  wmud-types.h  wmudclient.c  wmudclient.h  wmudclientstate.c  wmudclientstate.h  wmudplayer.c  wmudplayer.h  wmudworld.c  wmudworld.h  world.c  (+1 more)
wmud/world/: __init__.py  map.py
